--- a/contact.html
+++ b/contact.html
@@ -185,7 +185,7 @@
           </div>
 
           <div class="contact-form">
-            <form action="https://formspree.io/f/contact@iamsaurabhsaini.com" method="POST">
+            <form action="https://formspree.io/f/mnnlazoa" method="POST">
               <div class="form-group">
                 <label for="name">Full Name</label>
                 <input type="text" id="name" name="name" class="form-control" required placeholder="Jane Doe">
@@ -223,5 +223,6 @@
   </footer>
 
 </body>
+
 
 </html>
