--- a/blog.html
+++ b/blog.html
@@ -122,6 +122,17 @@
 
         <div class="articles-list">
 
+          <a href="insight-order-taker.html" class="article-card">
+            <div class="article-meta">
+              <time>FEB 23, 2026</time>
+            </div>
+            <div class="article-content">
+              <h2>From Order-Taker to Strategic Learning Partner</h2>
+              <p>Why shifting the language we use with instructional designers moves learning from content production to
+                performance impact.</p>
+            </div>
+          </a>
+
           <a href="insight-self-talk.html" class="article-card">
             <div class="article-meta">
               <time>OCT 24, 2024</time>
