Update portfolio files

--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Not Found · iamsaurabhsaini</title>
+  <title>Page Not Found Â· iamsaurabhsaini</title>
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <link rel="icon" href="./favicon.ico" type="image/png">
   <link rel="apple-touch-icon" href="./favicon.ico">
@@ -145,14 +145,26 @@
       }
     }
   </style>
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://iamsaurabhsaini.com/404.html">
+  <meta property="og:title" content="Page Not Found Â· iamsaurabhsaini">
+  <meta property="og:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta property="og:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://iamsaurabhsaini.com/404.html">
+  <meta name="twitter:title" content="Page Not Found Â· iamsaurabhsaini">
+  <meta name="twitter:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta name="twitter:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 </head>
 
 <body>
   <!--
-    PAGE MAP — 404.html
-    .error-card → Headline + guidance actions
-      .cta-group → Primary recovery paths back into the site
-    footer     → Secondary call-to-action for collaboration
+    PAGE MAP â€” 404.html
+    .error-card â†’ Headline + guidance actions
+      .cta-group â†’ Primary recovery paths back into the site
+    footer     â†’ Secondary call-to-action for collaboration
   -->
 
   <!-- CARD: Error summary + suggested destinations -->
@@ -194,4 +206,5 @@
 </body>
 
 </html>
+
 
