--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -92,6 +92,18 @@
             }
         }
     </style>
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://iamsaurabhsaini.com/about.html">
+  <meta property="og:title" content="About | Saurabh Saini">
+  <meta property="og:description" content="Saurabh Saini designs learning experiences that streamline processes and help organizations work smarter.">
+  <meta property="og:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://iamsaurabhsaini.com/about.html">
+  <meta name="twitter:title" content="About | Saurabh Saini">
+  <meta name="twitter:description" content="Saurabh Saini designs learning experiences that streamline processes and help organizations work smarter.">
+  <meta name="twitter:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 </head>
 
 <body>
@@ -151,7 +163,7 @@
                         </div>
 
                         <div class="subtle-testimonial">
-                            <p class="testimonial-quote">Most organizations don't lack talent—they lack visibility into
+                            <p class="testimonial-quote">Most organizations don't lack talentâ€”they lack visibility into
                                 where capability actually drives impact. <strong>That's where Saurabh Saini stands
                                     out.</strong></p>
                             <div class="testimonial-author">
