--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -88,6 +88,18 @@
       }
     }
   </style>
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://iamsaurabhsaini.com/blog.html">
+  <meta property="og:title" content="Insights | Saurabh Saini">
+  <meta property="og:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta property="og:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://iamsaurabhsaini.com/blog.html">
+  <meta name="twitter:title" content="Insights | Saurabh Saini">
+  <meta name="twitter:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta name="twitter:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 </head>
 
 <body>
@@ -150,7 +162,7 @@
             </div>
             <div class="article-content">
               <h2>The Authority Gap</h2>
-              <p>Why most teams fail not because of skill, but because decisions sit too high—and how to fix misaligned
+              <p>Why most teams fail not because of skill, but because decisions sit too highâ€”and how to fix misaligned
                 authority.</p>
             </div>
           </a>
