--- a/case-hazard.html
+++ b/case-hazard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -122,6 +122,18 @@
             display: block;
         }
     </style>
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://iamsaurabhsaini.com/case-hazard.html">
+  <meta property="og:title" content="Hazard Recognition & Risk Mitigation | Saurabh Saini">
+  <meta property="og:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta property="og:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://iamsaurabhsaini.com/case-hazard.html">
+  <meta name="twitter:title" content="Hazard Recognition & Risk Mitigation | Saurabh Saini">
+  <meta name="twitter:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta name="twitter:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 </head>
 
 <body>
@@ -149,7 +161,7 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="portfolio.html" class="back-link">← Back to Work</a>
+                <a href="portfolio.html" class="back-link">â† Back to Work</a>
 
                 <header class="doc-header">
                     <h1>Hazard Recognition & Risk Mitigation</h1>
@@ -226,7 +238,7 @@
 
                     <p>
                         <em>"This course has given us a common language and framework for discussing safety. We're now
-                            having more proactive conversations about risk instead of reactive ones about blame."</em> —
+                            having more proactive conversations about risk instead of reactive ones about blame."</em> â€”
                         Safety Department Lead
                     </p>
 
