--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -33,6 +33,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./assets/css/style.css">
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://iamsaurabhsaini.com/">
+  <meta property="og:title" content="Saurabh Saini | Performance Consultant & Instructional Designer">
+  <meta property="og:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta property="og:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://iamsaurabhsaini.com/">
+  <meta name="twitter:title" content="Saurabh Saini | Performance Consultant & Instructional Designer">
+  <meta name="twitter:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta name="twitter:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 </head>
 
 <body>
@@ -108,7 +120,7 @@
         <div class="testimonials-grid">
 
           <div class="testimonial-card clickable-card" onclick="openTestimonialModal('testimonial-1')">
-            <p class="testimonial-quote">Most organizations don't lack talent—they lack visibility into where capability
+            <p class="testimonial-quote">Most organizations don't lack talentâ€”they lack visibility into where capability
               actually drives impact. <strong>That's where Saurabh Saini stands out.</strong></p>
             <div class="testimonial-author">
               <div class="author-avatar">
@@ -122,15 +134,15 @@
                 <p>Vice President @ Ashley Global Retail<br>VP of Operational Excellence</p>
               </div>
             </div>
-            <span class="read-more-link">Read Full Endorsement →</span>
+            <span class="read-more-link">Read Full Endorsement â†’</span>
 
             <!-- Hidden Full Content -->
             <div id="testimonial-1" class="hidden-testimonial-content">
-              <p>Most organizations don't lack talent—they lack visibility into where capability actually drives impact.
+              <p>Most organizations don't lack talentâ€”they lack visibility into where capability actually drives impact.
                 <strong>That's where Saurabh Saini stands out.</strong><br><br>Saurabh has a sharp ability to see how
                 skills translate into execution, where work creates leverage, and what's truly slowing
-                performance—people, process, or systems. He focuses on signal over noise and helps teams turn expertise
-                into outcomes.<br><br>That clarity is rare—and it's what drives better decisions and stronger results.
+                performanceâ€”people, process, or systems. He focuses on signal over noise and helps teams turn expertise
+                into outcomes.<br><br>That clarity is rareâ€”and it's what drives better decisions and stronger results.
               </p>
             </div>
           </div>
@@ -151,7 +163,7 @@
                 <p>Director, People Development<br>Founder of Limitless Thinking</p>
               </div>
             </div>
-            <span class="read-more-link">Read Full Endorsement →</span>
+            <span class="read-more-link">Read Full Endorsement â†’</span>
 
             <!-- Hidden Full Content -->
             <div id="testimonial-2" class="hidden-testimonial-content">
@@ -159,7 +171,7 @@
                 with.<br><br>Over the past year, I've had the opportunity to watch a team member significantly elevate
                 both their mindset and their impact. The shift in self-awareness, openness to feedback, and commitment
                 to continuous learning has translated directly into stronger performance and greater influence within
-                the team.<br><br>What stands out most is the willingness to embrace both accountability and support —
+                the team.<br><br>What stands out most is the willingness to embrace both accountability and support â€”
                 <strong>understanding that high standards and strong leadership can coexist with trust and
                   development.</strong></p>
             </div>
