--- a/insight-decision-point.html
+++ b/insight-decision-point.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -91,6 +91,18 @@
             margin-bottom: 1.5rem;
         }
     </style>
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://iamsaurabhsaini.com/insight-decision-point.html">
+  <meta property="og:title" content="Designing for the Decision Point | Saurabh Saini">
+  <meta property="og:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta property="og:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://iamsaurabhsaini.com/insight-decision-point.html">
+  <meta name="twitter:title" content="Designing for the Decision Point | Saurabh Saini">
+  <meta name="twitter:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta name="twitter:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 </head>
 
 <body>
@@ -118,7 +130,7 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="blog.html" class="back-link">← Back to Insights</a>
+                <a href="blog.html" class="back-link">â† Back to Insights</a>
 
                 <header class="doc-header">
                     <h1>The Authority Gap</h1>
@@ -148,10 +160,10 @@
                     <br>
                     <p>
                         When authority is misaligned:<br>
-                        • Execution slows<br>
-                        • Risk increases (through bottlenecks)<br>
-                        • Leaders become approval machines<br>
-                        • High performers disengage
+                        â€¢ Execution slows<br>
+                        â€¢ Risk increases (through bottlenecks)<br>
+                        â€¢ Leaders become approval machines<br>
+                        â€¢ High performers disengage
                     </p>
                     <br>
                     <p>
@@ -164,9 +176,9 @@
                     <br>
                     <p>
                         The shift:<br>
-                        Skill development → Decision enablement<br>
-                        Oversight → Guardrails<br>
-                        Escalation → Ownership
+                        Skill development â†’ Decision enablement<br>
+                        Oversight â†’ Guardrails<br>
+                        Escalation â†’ Ownership
                     </p>
                     <br>
                     <p>
