--- a/insight-order-taker.html
+++ b/insight-order-taker.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -106,6 +106,18 @@
             text-decoration: underline;
         }
     </style>
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://iamsaurabhsaini.com/insight-order-taker.html">
+  <meta property="og:title" content="From Order-Taker to Strategic Learning Partner | Saurabh Saini">
+  <meta property="og:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta property="og:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://iamsaurabhsaini.com/insight-order-taker.html">
+  <meta name="twitter:title" content="From Order-Taker to Strategic Learning Partner | Saurabh Saini">
+  <meta name="twitter:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta name="twitter:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 </head>
 
 <body>
@@ -133,7 +145,7 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="blog.html" class="back-link">← Back to Insights</a>
+                <a href="blog.html" class="back-link">â† Back to Insights</a>
 
                 <header class="doc-header">
                     <h1>From Order-Taker to Strategic Learning Partner</h1>
@@ -158,7 +170,7 @@
 
                 <div class="doc-content">
                     <p>
-                        This week’s Articulate challenge focused on something simple but powerful: the language we use
+                        This weekâ€™s Articulate challenge focused on something simple but powerful: the language we use
                         with instructional designers.
                     </p>
                     <br>
@@ -168,7 +180,7 @@
                     </p>
                     <br>
                     <p>
-                        Instead of asking for “a quick eLearning,” what if we started by asking:
+                        Instead of asking for â€œa quick eLearning,â€ what if we started by asking:
                     </p>
                     <br>
                     <p><strong>What problem are we solving?</strong></p>
@@ -178,7 +190,7 @@
                     </p>
                     <br>
                     <p>
-                        Here’s my take on things to say—and not say—to instructional designers.
+                        Hereâ€™s my take on things to sayâ€”and not sayâ€”to instructional designers.
                     </p>
                     <br>
                     <p>
