--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -130,6 +130,18 @@
       }
     }
   </style>
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://iamsaurabhsaini.com/portfolio.html">
+  <meta property="og:title" content="Work & Case Studies | Saurabh Saini">
+  <meta property="og:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta property="og:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://iamsaurabhsaini.com/portfolio.html">
+  <meta name="twitter:title" content="Work & Case Studies | Saurabh Saini">
+  <meta name="twitter:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta name="twitter:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 </head>
 
 <body>
@@ -272,7 +284,7 @@
               </a>
             </div>
             <div class="case-content">
-              <h2>Interactive Learning System – Articulate Storyline</h2>
+              <h2>Interactive Learning System â€“ Articulate Storyline</h2>
               <div class="case-meta">
                 <div class="meta-block">
                   <span>Role</span>
