--- a/case-ecosystem.html
+++ b/case-ecosystem.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -122,6 +122,18 @@
             display: block;
         }
     </style>
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://iamsaurabhsaini.com/case-ecosystem.html">
+  <meta property="og:title" content="Operations Learning Ecosystem | Saurabh Saini">
+  <meta property="og:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta property="og:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://iamsaurabhsaini.com/case-ecosystem.html">
+  <meta name="twitter:title" content="Operations Learning Ecosystem | Saurabh Saini">
+  <meta name="twitter:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta name="twitter:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 </head>
 
 <body>
@@ -149,7 +161,7 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="portfolio.html" class="back-link">← Back to Work</a>
+                <a href="portfolio.html" class="back-link">â† Back to Work</a>
 
                 <header class="doc-header">
                     <h1>Choosing the Right Microsoft Tool: A Use Case First Guide</h1>
@@ -175,7 +187,7 @@
                     <h2>Overview: Why this matters</h2>
                     <p>
                         This initiative wasn't about learning every Microsoft tool technically. It was about
-                        understanding what problem each tool solves, so the organization knows which one to use—and
+                        understanding what problem each tool solves, so the organization knows which one to useâ€”and
                         when.
                     </p>
                     <p>
@@ -189,7 +201,7 @@
 
                     <h3>Microsoft Lists</h3>
                     <p>
-                        Microsoft Lists is like Excel—but built for shared tracking, visibility, and collaboration. If
+                        Microsoft Lists is like Excelâ€”but built for shared tracking, visibility, and collaboration. If
                         Excel is great for calculations, Lists is great for tracking work, requests, and status.
                     </p>
                     <ul>
@@ -212,7 +224,7 @@
 
                     <h3>Microsoft OneNote</h3>
                     <p>
-                        OneNote is not a document tool—it’s a knowledge and thinking tool. It's the "everything before"
+                        OneNote is not a document toolâ€”itâ€™s a knowledge and thinking tool. It's the "everything before"
                         a final Word document.
                     </p>
                     <ul>
@@ -230,7 +242,7 @@
 
                     <h2>Final Thoughts</h2>
                     <p>
-                        You don’t need to master every technical detail. The real skill is asking: <em>"What operational
+                        You donâ€™t need to master every technical detail. The real skill is asking: <em>"What operational
                             problem am I trying to solve, and which tools fits that specific boundary?"</em> That
                         mindset dramatically reduces administrative friction.
                     </p>
@@ -238,7 +250,7 @@
                     <h2>Leadership Feedback</h2>
                     <div class="subtle-testimonial">
                         <p class="testimonial-quote">He focuses on signal over noise and helps teams turn expertise into
-                            outcomes. That clarity is rare—and it's what drives better decisions and stronger results.
+                            outcomes. That clarity is rareâ€”and it's what drives better decisions and stronger results.
                         </p>
                         <div class="testimonial-author">
                             <div class="author-avatar">
