--- a/insight-stop-building.html
+++ b/insight-stop-building.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -91,6 +91,18 @@
             margin-bottom: 1.5rem;
         }
     </style>
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://iamsaurabhsaini.com/insight-stop-building.html">
+  <meta property="og:title" content="The 4 Layer Modern Learning Analytics | Saurabh Saini">
+  <meta property="og:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta property="og:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://iamsaurabhsaini.com/insight-stop-building.html">
+  <meta name="twitter:title" content="The 4 Layer Modern Learning Analytics | Saurabh Saini">
+  <meta name="twitter:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
+  <meta name="twitter:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 </head>
 
 <body>
@@ -118,7 +130,7 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="blog.html" class="back-link">← Back to Insights</a>
+                <a href="blog.html" class="back-link">â† Back to Insights</a>
 
                 <header class="doc-header">
                     <h1>The 4 Layer Modern Learning Analytics</h1>
@@ -154,24 +166,24 @@
                     </p>
                     <br>
                     <p>
-                        That’s Layer 1.
+                        Thatâ€™s Layer 1.
                     </p>
                     <br>
                     <p>
-                        Executives don’t fund activity.<br>
+                        Executives donâ€™t fund activity.<br>
                         They fund impact.
                     </p>
                     <br>
                     <p>
-                        The real question isn’t: “Did people complete the training?”
+                        The real question isnâ€™t: â€œDid people complete the training?â€
                     </p>
                     <br>
                     <p>
-                        It’s:<br>
-                        • Did behavior change?<br>
-                        • Did error rates drop?<br>
-                        • Did cycle time improve?<br>
-                        • Did revenue per rep increase?
+                        Itâ€™s:<br>
+                        â€¢ Did behavior change?<br>
+                        â€¢ Did error rates drop?<br>
+                        â€¢ Did cycle time improve?<br>
+                        â€¢ Did revenue per rep increase?
                     </p>
                     <br>
                     <p>
@@ -180,23 +192,23 @@
                     <br>
                     <p>
                         If your measurement stops at Activity,<br>
-                        you’re tracking effort — not performance.
+                        youâ€™re tracking effort â€” not performance.
                     </p>
                     <br>
                     <p>
-                        And effort doesn’t show up in board meetings.<br>
+                        And effort doesnâ€™t show up in board meetings.<br>
                         Impact does.
                     </p>
                     <br>
                     <p>
                         The maturity shift:<br>
-                        Activity → Capability → Behavior → Business Impact
+                        Activity â†’ Capability â†’ Behavior â†’ Business Impact
                     </p>
                     <br>
                     <p>
                         Most teams never connect the stack.<br>
                         That gap?<br>
-                        That’s where credibility is lost.<br>
+                        Thatâ€™s where credibility is lost.<br>
                         And where strategic L&D becomes performance architecture.
                     </p>
                     <br>
